--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-server.port=801
+server.port=8091
+logging.level.root=DEBUG
+
+spring.mvc.static-path-pattern=/**
+spring.resources.static-locations= classpath:/,classpath:/static/
